--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,12 @@ install:
   - pip install ipykernel
 script:
   - python -m sphinx . build/ -b html
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep-history: true
+  on:
+    branch: gh-pages
+    
