Asked Travis to create .nojekyll

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ install:
   - pip install ipykernel
 script:
   - python -m sphinx . build/ -b html
+  - touch build/.nojekyll # this file tells gh-pages that there is no need to build
 
 deploy:
   provider: pages
