--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,10 @@ deploy:
   target-branch: gh-pages 
   on:
     branch: master
-    
+
+notifications:
+  email:
+  recipients:
+    - jarkko.toivonen@cs.helsinki.fi
+  on_success: always
+  on_failure: always
