--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install Sphinx
   - pip install nbsphinx
   - pip install ipykernel
+  - pip install sphinx_rtd_theme
 script:
   - python -m sphinx . build/ -b html
   - touch build/.nojekyll # this file tells gh-pages that there is no need to build
