--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install sphinx_rtd_theme
 script:
   - python -m sphinx . build/ -b html
+  - ./add_html_anchors_to_exercises.py build/*.html
   - touch build/.nojekyll # this file tells gh-pages that there is no need to build
 
 deploy:
