--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   - pip install nbsphinx==0.4.2
   - pip install ipykernel
   - pip install sphinx_rtd_theme
+  - pip install lxml
   - pip install beautifulsoup4
 script:
   - python -m sphinx . build/ -b html
