--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,12 @@ install:
   - pip install sphinx_rtd_theme
   - pip install lxml
   - pip install beautifulsoup4
+  - pip install pandas==0.22.0
+  - pip install matplotlib==2.1.1
+  - pip install scikit-learn==0.19.1
+  - pip install scipy==0.19.
+  - pip install seaborn==0.8.0
+
 script:
   - python -m sphinx . build/ -b html
   - ./add_html_anchors_to_exercises.py build/*.html
