--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ python:
 addons:
   apt:
     packages:
-      - pandoc
+#      - pandoc
 install:
+  - pip install pandoc==2.2.3
   - pip install Sphinx
   - pip install nbsphinx==0.4.2
   - pip install ipykernel
@@ -16,7 +17,7 @@ install:
   - pip install pandas==0.22.0
   - pip install matplotlib==2.1.1
   - pip install scikit-learn==0.19.1
-  - pip install scipy==0.19.
+  - pip install scipy==0.19.1
   - pip install seaborn==0.8.0
 
 script:
