--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ install:
   - pip install sphinx_rtd_theme
   - pip install lxml
   - pip install beautifulsoup4
+  - pip install numpy==1.13.3
   - pip install pandas==0.22.0
   - pip install matplotlib==2.1.1
   - pip install scikit-learn==0.19.1
